--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ header img{
     margin-left: 230px;
     
 }
-.ladi{
+.text-hone{
     border-left: 6px solid #FF900E;
     height: 105px;
     padding-left: 5px;
@@ -219,4 +219,34 @@ header img{
 }
 
 /* sponsor start */
+.our-sponsor-section{
+    margin-top: 180px;
+    text-align: center;
+    padding-bottom: 130px;
+}
+.our-sponsor-section h1{
+    font-size: 45px;
+}
+.our-sponsor-section p{
+    color: #727272;
+}
+.sponsor{
+    display: flex;
+    justify-content: center;
+    gap: 48px;
+    padding-top: 15px;
+}
+
+/* footer start */
+footer{
+    
+    text-align: center;
+    margin: 0 auto;
+    background-color: pink;
+    width: 1020px;
+    height: 100px;
+    padding-top: 50px;
+}
+
+
 
