--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ nav ul li, a{
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
-
+    color: white;
     padding: 20px 24px;
     background: #FF900E;
     border: none;
@@ -106,6 +106,7 @@ header img{
 
 .sb-btn{
     margin-top: 32px;
+
 }
 
 .span-one{
@@ -179,7 +180,7 @@ header img{
     margin-left: 64px;
     border: none;
     border-radius: 5px;
-    
+    color: white;
 }
 
 /* some facts start */
@@ -242,7 +243,7 @@ footer{
     
     text-align: center;
     margin: 0 auto;
-    background-color: pink;
+    background-color: #FFF4E7;
     width: 1020px;
     height: 100px;
     padding-top: 50px;
